--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -8,6 +8,7 @@
     {{ styles.append('/assets/css/fonts.css') }}
 
     {{ styles.append('/assets/css/datatables.min.css') }}
+    {{ styles.append('/assets/js/plugin/jquery.modal/jquery.modal.min.css') }}
 
     {{ styles.append('/assets/css/atlantis.css') }}
 
@@ -22,6 +23,7 @@
     {{ scripts.append('/assets/js/plugin/jquery-ui-touch-punch/jquery.ui.touch-punch.min.js') }}
     {{ scripts.append('/assets/js/plugin/jquery-scrollbar/jquery.scrollbar.min.js') }}
     {{ scripts.append('/assets/js/plugin/datatables/datatables.min.js') }}
+    {{ scripts.append('/assets/js/plugin/jquery.modal/jquery.modal.min.js') }}
     {{ scripts.append('/assets/js/plugin/sweetalert/sweetalert.min.js') }}
     {{ scripts.append('/assets/js/plugin/select2/select2.full.min.js') }}
     {{ scripts.append('/assets/js/plugin/summernote/summernote-bs4.min.js') }}
