--- a/src/Template/cup/user/form.twig
+++ b/src/Template/cup/user/form.twig
@@ -132,6 +132,7 @@
                             </div>
                             <div class="name">{{ item.username }}</div>
                             <div class="text-muted">{{ reference('/Domain/Types/UserLevelType::LIST', item.level) }}</div>
+                            <div class="text-muted">{{ item.uuid }}</div>
                         </div>
                     </div>
                     <div class="card-footer">
