добавил телефон пользователю

--- a/src/Template/cup/catalog/order/form.twig
+++ b/src/Template/cup/catalog/order/form.twig
@@ -89,7 +89,7 @@
                                     <div class="col-md-12">
                                         {% include 'cup/form.twig' with {
                                             'label': 'Телефон',
-                                            'type': 'text',
+                                            'type': 'tel',
                                             'name': 'phone',
                                             'args': {
                                                 'value': order.phone,
