--- a/src/Template/cup/publication/form.twig
+++ b/src/Template/cup/publication/form.twig
@@ -214,8 +214,10 @@
                         </div>
                     </div>
                     <div class="card-action">
-                        <button type="submit" class="btn btn-success">Сохранить</button>
-                        <button type="button" data-click="preview" class="btn btn-info">Предварительный просмотр</button>
+                        <button type="submit" name="save" value="exit" class="btn btn-primary">Сохранить и выйти</button>
+                        <button type="submit" name="save" class="btn btn-info">Сохранить</button>
+
+                        <button type="button" data-click="preview" class="btn btn-info float-right">Предварительный просмотр</button>
                     </div>
                 </form>
             </div>
