--- a/src/Template/cup/user/form.twig
+++ b/src/Template/cup/user/form.twig
@@ -126,7 +126,8 @@
                         </div>
                     </div>
                     <div class="card-action">
-                        <button type="submit" class="btn btn-success">Сохранить</button>
+                        <button type="submit" name="save" value="exit" class="btn btn-primary">Сохранить и выйти</button>
+                        <button type="submit" name="save" class="btn btn-info">Сохранить</button>
                     </div>
                 </form>
             </div>
