--- a/src/Template/cup/catalog/product/form.twig
+++ b/src/Template/cup/catalog/product/form.twig
@@ -404,7 +404,8 @@
                     </div>
 
                     <div class="card-action">
-                        <button type="submit" class="btn btn-success">Сохранить</button>
+                        <button type="submit" name="save" value="exit" class="btn btn-primary">Сохранить и выйти</button>
+                        <button type="submit" name="save" class="btn btn-info">Сохранить</button>
                     </div>
                 </form>
             </div>
