--- a/src/Template/cup/guestbook/form.twig
+++ b/src/Template/cup/guestbook/form.twig
@@ -106,11 +106,10 @@
                                 } %}
                             </div>
                         </div>
-
-                        </div>
                     </div>
                     <div class="card-action">
-                        <button type="submit" class="btn btn-success">Сохранить</button>
+                        <button type="submit" name="save" value="exit" class="btn btn-primary">Сохранить и выйти</button>
+                        <button type="submit" name="save" class="btn btn-info">Сохранить</button>
                     </div>
                 </form>
             </div>
