--- a/src/Template/cup/catalog/product/index.twig
+++ b/src/Template/cup/catalog/product/index.twig
@@ -34,14 +34,15 @@
                         <table data-table class="display table table-striped table-hover" >
                             <thead>
                                 <tr>
-                                    <th width="5%"><i class="fas fa-sort" data-toggle="tooltip" data-placement="top" title="Название категории. Можно оставить пустым, тогда значение будет сгенерировано автоматически. Допустимо использование только латинских символов и цифер без пробелов"></i></th>
+                                    {# поле для сортировки данных в таблице #}
+                                    <th style="display: none"></th>
+                                    <th>Артикул</th>
                                     <th>Наименование</th>
-                                    <th width="10%">Категория</th>
+                                    <th>Категория</th>
                                     <th>Цена</th>
                                     <th width="10%">{{ category.product.field_1 ?? 'Поле 1' }}</th>
                                     <th width="10%">{{ category.product.field_2 ?? 'Поле 2' }}</th>
                                     <th width="10%">{{ category.product.field_3 ?? 'Поле 3' }}</th>
-                                    <th width="5%">Артикул</th>
                                     <th width="8%" class="text-center"><i class="fas fa-boxes" data-toggle="tooltip" data-placement="top" title="Объем упаковки"></i></th>
                                     <th width="8%" class="text-center"><i class="fas fa-warehouse" data-toggle="tooltip" data-placement="top" title="Количество на складе"></i></th>
                                     <th width="10%" class="text-center no-sorting"></th>
@@ -51,7 +52,9 @@
                                 {% for item in products %}
                                     {% set buf = categories.firstWhere('uuid', item.category) %}
                                     <tr>
-                                        <td class="text-center">{{ item.order }}</td>
+                                        {# поле для сортировки данных в таблице #}
+                                        <td style="display: none">{{ item.order }}</td>
+                                        <td>{{ item.vendorcode }}</td>
                                         <td>
                                             <a href="/catalog/{{ buf.address }}/{{ item.address }}" target="_blank">
                                                 {{ item.title }}
@@ -67,7 +70,6 @@
                                         <td>{{ item.field1 }}</td>
                                         <td>{{ item.field2 }}</td>
                                         <td>{{ item.field3 }}</td>
-                                        <td>{{ item.vendorcode }}</td>
                                         <td class="text-center">{{ item.getVolume() }}</td>
                                         <td class="text-center">{{ item.stock|format_number({fraction_digit: 2}) }}</td>
                                         <td class="text-center">
